style(sidebar): fix nav menu clipping with social icons

--- a/src/components/ComponentStyles/header.sass
+++ b/src/components/ComponentStyles/header.sass
@@ -16,6 +16,9 @@
 
 	.scroll-bar
 		height: calc(100% - 50px)
+		overflow-y: none
+		-webkit-overflow-scrolling: touch
+		padding-bottom: 90px
 
 	.hl-top
 		text-align: center
@@ -59,6 +62,7 @@
 		@include custom-breakpoint(1400px)
 			.nav-link
 				padding: 15px 30px
+
 		li
 			width: 100%
 			+ li
